# stock-options

./: .gitignore  README.md  blackScholes.py  clean_code.py  cleanup_obsolete.sh  pyproject.toml  render.py  requirements.txt  short.ipynb  test_new_features.py  testing_gym_env.ipynb  testing_gym_env_PHIA.ipynb
data/: PHIA.csv  binance-BTCUSDT-1h.pkl
experiments/: README.md  quick_test.py
notebooks/: data.ipynb  data_old_polars.ipynb
ppo_trading_tensorboard/PPO_1/: events.out.tfevents.1753646019.lucas-arch.5973.0  events.out.tfevents.1757200212.lucas-arch.25553.0
ppo_trading_tensorboard/PPO_10/: events.out.tfevents.1753647644.lucas-arch.12166.0
ppo_trading_tensorboard/PPO_11/: events.out.tfevents.1753647692.lucas-arch.12349.0
ppo_trading_tensorboard/PPO_12/: events.out.tfevents.1753647727.lucas-arch.12566.0
ppo_trading_tensorboard/PPO_13/: events.out.tfevents.1753647844.lucas-arch.12802.0
ppo_trading_tensorboard/PPO_14/: events.out.tfevents.1753647876.lucas-arch.13005.0
ppo_trading_tensorboard/PPO_15/: events.out.tfevents.1753650336.lucas-arch.19313.0
ppo_trading_tensorboard/PPO_2/: events.out.tfevents.1753646134.lucas-arch.6304.0  (+1 more)
render_logs/: Stock_2025-07-27_19-38-32.pkl  Stock_2025-07-27_19-38-42.pkl  Stock_2025-07-27_19-38-50.pkl  Stock_2025-07-27_19-40-39.pkl  Stock_2025-07-27_19-46-14.pkl  Stock_2025-07-27_23-03-30.pkl  Stock_2025-07-27_23-12-10.pkl  Stock_2025-07-27_23-18-43.pkl  Stock_2025-09-05_18-46-14.pkl
src/: trader.py
test/: env_test.py  sb3_run.py  sb3_train.py  test_get_current_total_value.py  test_portfolio.py
(+36 files in other folders)
