[tool.poetry]
name = "stock-options"
version = "0.1.0"
description = "A GYM based environment for financial options created for Reinforcement Learning purposes"
authors = ["AlexanderLB98 <alexanderbool98@gmail.com>"]
readme = "README.md"
packages = [{include = "stock_options", from = "src"}] # Assuming your code is in src/stock_options

[tool.poetry.dependencies]
python = ">=3.13"
polars = ">=1.3.0"
gymnasium = "*"   
numpy = "*"       
scipy = "^1.16.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0" # For testing

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"